--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,8 @@ PORT = 4000
 NODE_ENV = DEVELOPMENT
 FONTEND_URL = http://localhost:3000
 
-DB_LOCAL_URL = mongodb://localhost:27017/employee
+# DB_LOCAL_URL = mongodb://localhost:27017/employee
+DB_LOCAL_URL = mongodb+srv://jcb:jcb@cluster0.jqxiolx.mongodb.net/employee
 
 
 JWT_SECRET = ADFASFASFAaaffa12132adfdasfast
